# VOCL

./: Makefile.am  configure.ac
trunk/: Makefile.am  configure.ac
trunk/examples/bandwidth/: bandwidth.c  bw_timer.c  functions.h
trunk/examples/inputs/: formatdb  sampledb1K100.data  sampledb1K100.loc  sampledb1K400  sampledb2K400.data  sampledb7K100  sampledb7K50  sampledb7K50.loc  temp.loc  temp.txt  testDBAll.loc  testDBC1.loc  testDBCoarse.loc  testDBdna.loc  testdb2K1000.data  testdb2K1000.loc  testdb3K800.loc  testdb4K500  testdb4K500.data  testdb6K400.data  testdb7K400  testdb7K400.data  testdb7K400.loc
trunk/examples/inputs/tool/: formatdb.cpp  param.h
trunk/examples/matrixMul1V/: build.sh  machine.txt  makefileshared  testlocal.sh  testremote.sh
trunk/examples/matrixMul1V/inc/: functions.h
trunk/examples/matrixMul1V/src/: matrixMul.c
trunk/examples/matrixMulV/: test.sh
trunk/examples/matrixMulV/src/: matrixMul.c  timeRec.c
trunk/examples/matrixmult/: matrixmult_dp.c  matrixmult_dp.cl  matrixmult_sp.c  mm_timer.c  timeRec.c
trunk/examples/matrixtrans/: mt_timer.c  mt_timer.h  oclTranspose.cpp  oclTranspose_dp.cpp  oclTranspose_sp.cpp
trunk/examples/oclNbody/: Makefile  makeshared
trunk/examples/oclNbody/inc/: oclBodySystemCpu_dp.h  oclBodySystemCpu_sp.h  oclBodySystemOpenclLaunch_dp.h  oclBodySystemOpenclLaunch_sp.h  oclBodySystemOpencl_dp.h  oclBodySystemOpencl_sp.h  oclBodySystem_dp.h  oclBodySystem_sp.h  timeRec.h
trunk/examples/oclNbody/src/: nbody_timer.cpp  oclBodySystemOpenclLaunch.cpp  oclBodySystemOpenclLaunch_dp.cpp  oclBodySystemOpenclLaunch_sp.cpp  oclBodySystemOpencl_dp.cpp  oclBodySystemOpencl_sp.cpp  oclNbody.cpp  oclNbodyGold_dp.cpp  oclNbodyGold_sp.cpp  oclNbody_dp.cpp  oclNbody_sp.cpp  param_dp.cpp  param_sp.cpp  timeRec.cpp
trunk/examples/smithWaterman2/: testpair.sh
trunk/examples/smithWaterman2V/: swat  test.sh
trunk/examples/smithWaterman2V/src/: timeRec.cpp
trunk/examples/smithWaterman4V/: build.sh  test.sh  testDB.sh  testremote.sh
trunk/examples/smithWaterman4V/src/: swat.cpp
trunk/examples/swat/: functions.h  global.h  swat.cpp  swat_timer.cpp
trunk/examples/swat/input/: genSeq.pl  sampledb2K1.data  sampledb6K1
trunk/examples/transpose/: build.sh
trunk/examples/transpose1/: SdkMasterLog.csv  build.sh  buildshared.sh  oclTranspose1.cpp  test.sh  timeRec.c
trunk/lib/: buildmaster.sh  buildslave.sh  buildstatic.sh  gpuv.c  gpuv.h  gpuv1.h  gpuv10.c  gpuv10.h  gpuv11.c  gpuv3.h  gpuv4.h  gpuv5.c  gpuv7.c  gpuv9.c  matrixMul.cl  slaveOpenCL.c  slaveOpenCL.h  slaveOpenCL1.c  slaveOpenCL10.c  slaveOpenCL11.c  slaveOpenCL12.h  slaveOpenCL4.c  slaveOpenCL8.c  slaveOpenCL9.c  sync.sh
trunk/mulIter/bandwidth/: bandWidth.txt  temp.sh  testremote.sh
trunk/mulIter/bandwidth/src/: bandWidth1.c  timeRec.c
trunk/mulIter/matrixMul1V/: makefileshared  test.sh
trunk/mulIter/oclNbody/: Makefile  oclNbody.txt  testlocal.sh  testremote.sh
trunk/mulIter/oclNbody/src/: oclBodySystemOpenclLaunch.cpp
trunk/mulIter/smithWaterman/: makefileshared  testremote.sh
trunk/mulIter/smithWaterman4V/: testlocal.sh  testremote.sh
trunk/mulIter/transpose1/: testremote.sh  timeRec.c
trunk/oneIter/shoc/shoc-1.01/: config.status
trunk/oneIter/shoc/shoc-1.01o/: configure
trunk/src/: gpuv.c  gpuv.h  slaveOpenCL.c  vocl.c  vocl.h  voclCommandQueueProc.c  voclContextProc.c  voclDeviceIDProc.c  voclDynamicOpenCLLoad.c  voclDynamicOpenCLLoad.h  voclEventProc.c  voclEventProc.h  voclEventProc.h.in  voclFlowControl.c  voclKernelArgProc.c  voclKernelArgProc.h  voclKernelProc.c  voclKernelPrototype.c  voclLoadBalance.c  voclMemoryProc.c  voclMigBufferProc.c  voclMigOpencl.c  voclMigration.c  voclMigration.h  voclMigrationDataTransfer.c  voclMigrationDeviceProc.c  voclMigrationDeviceProc.h  voclObjCount.c  voclOpencl.c  voclOpencl.h  voclOpenclMacro.h  voclPlatformIDProc.c  voclProgramProc.c  voclProxyNameProc.c  voclReadBufferProc.c  voclSamplerProc.c  voclStructures.h.in  voclVirtualGPU.c  voclWinProc.c  voclWriteBufferProc.c  (+30 more)
trunk/temp/: testall.sh
trunk/temp/bandwidth/: makefile
trunk/temp/bandwidth/src/: bandWidth.c
trunk/temp/inputs/: sampledb1K20.data  sampledb2K20.loc  sampledb3K20  sampledb4K20  sampledb4K20.data  sampledb5K20  sampledb6K20.loc  sampledb7K20  sampledb7K20.data  sampledb7K20.loc
trunk/temp/matrixMul1V/: test.sh
trunk/temp/matrixMul1V/src/: matrixMul.c  matrixMul1.c
trunk/temp/oclNbody/: makefileshared  oclNbody.txt  test.sh
trunk/temp/oclNbody/src/: oclNbody.cpp
trunk/temp/shoc/shoc-1.01/: LICENSE.txt
trunk/temp/shoc/shoc-1.01o/: INSTALL.txt
trunk/temp/smithWaterman4V/: makefileshared
trunk/temp/transpose1/: test.sh
trunk/tools/forcedMig/: forceMigProxyProc.c  voclForcedMig.c
trunk/vocl-mp/: bb44_mm.sh  bb44_mm_result.txt  bb44_mt.sh  bb44_nb.sh  bb44_runProxy.sh  bb44_xy_swat.sh  bb45_mm.sh  bb45_mt.sh  bb45_runProxy.sh  bb45_swat.sh  bb47_mm.sh  bb47_swat.sh  bb48_mm.sh  bb48_mt.sh  bb48_runProxy.sh  build.sh  cpu_bb48_mm.sh  cpu_ib_bb45_mm_result.txt  ib_bb45_mm_result.txt  ib_bb45_mt_result.txt  ib_bb48_mt_result.txt  remote_bb45_mm.sh  single_remote_cpu_ib_bb45_mt_result.txt
trunk/vocl-mp/be_stream/: ib_bb45_mt_result.txt  ib_bb45_sw_result.txt  oclTranspose.txt
trunk/vocl-mp/vocl/: cpu_bb48_mm.sh  cpu_ib_bb47_mt_result_mult.txt  oclTranspose.txt
trunk/vocl-mp/vocl/.deps/: alignments.Po  bandwidth.Po  matrixmult_sp.Po  nbody_dp-oclNbodyGold_dp.Po  nbody_dp-param_dp.Po  prints.Po  voclCommandQueueProc.Plo  voclFlowControl.Plo  voclKernelArgProc.Plo  voclKernelPrototype.Plo  voclLoadBalance.Plo  voclMigration.Plo  voclMigrationDataTransfer.Plo  voclOpencl.Plo  voclWinProc.Plo  vocl_proxy-vocl_proxyMigration.Po  vocl_proxy-vocl_proxyReadBufferProc.Po  vocl_proxy-vocl_proxyWinProc.Po
trunk/vocl-mp/vocl/src/: mutex.h  voclDynamicOpenCLLoad.c  voclMigBufferProc.c  voclMigrationDataTransfer.c  voclOpencl.c  voclOpencl.h  voclPlatformIDProc.c  voclProgramProc.c  vocl_proxy.c  (+9 more)
trunk/vocl-mp/vocl_bak/: Makefile  Makefile.am  autogen.sh  configure.ac  matrixmult_dp
(+650 files in other folders)
